--- a/index.html
+++ b/index.html
@@ -4,55 +4,18 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
         <title>Document</title>
     </head>
     <body>
-        <canvas id="myChart" width="400" height="400"></canvas>
+        <p>opo</p>
+        <script src="https://d3js.org/d3.v7.min.js"></script>
         <script>
-            var ctx = document.getElementById("myChart").getContext("2d");
-
-            const data = {
-                datasets: [
-                    {
-                        label: "Scatter Dataset",
-                        data: [
-                            {
-                                x: -10,
-                                y: 0,
-                            },
-                            {
-                                x: 0,
-                                y: 10,
-                            },
-                            {
-                                x: 10,
-                                y: 5,
-                            },
-                            {
-                                x: 0.5,
-                                y: 5.5,
-                            },
-                        ],
-                        backgroundColor: "rgb(255, 99, 132)",
-                    },
-                ],
-            };
-
-            const config = {
-                type: "scatter",
-                data: data,
-                options: {
-                    scales: {
-                        x: {
-                            type: "linear",
-                            position: "bottom",
-                        },
-                    },
-                },
-            };
-
-            var myChart = new Chart(ctx, config);
+            d3.csv(
+                "./datasets/walmart/full_walmart_2010-2013.csv",
+                function (data) {
+                    console.log(data);
+                }
+            );
         </script>
     </body>
 </html>
