Graphs the first 50 data on a scatterplot

--- a/in.html
+++ b/in.html
@@ -9,13 +9,6 @@
     <body>
         <p>opo</p>
         <script src="https://d3js.org/d3.v7.min.js"></script>
-        <script>
-            d3.csv(
-                "./datasets/walmart/full_walmart_2010-2013.csv",
-                function (data) {
-                    console.log(data);
-                }
-            );
-        </script>
+        <script src=""></script>
     </body>
 </html>
