--- a/show.html
+++ b/show.html
@@ -14,13 +14,16 @@
         <title>Bunng Matrix</title>
     </head>
     <body>
-        <div id="intro">
+        <header>
             <h1>BunnyMatrix</h1>
-            <p>
-                We use data visualization to help you predict the success of a
-                company based on KPIs.
-            </p>
-            <a href="show.html">Get Started</a>
-        </div>
+            <div>
+                <h2>*Company*</h2>
+                <nav>
+                    <a class="selected">Data</a>
+                    <a>Prediction</a>
+                </nav>
+            </div>
+        </header>
+        THE REST
     </body>
 </html>
